# ishtar_ai_app

./: .gitignore  .replit  README.md  pyproject.toml  replit.nix
app/: config.py  main.py  middleware.py
app/content/: __init__.py  blog_articles.py  case_studies.py  products.py  resources.py
app/routes/: pages.py  seo.py
app/static/: site.webmanifest
app/static/css/: styles.css
app/static/img/: .gitkeep
app/static/js/: main.js
app/templates/: 404.html  500.html  about.html  base.html  blog.html  blog_post.html  case_studies.html  case_study.html  contact.html  demo.html  faq.html  finance.html  implementation.html  index.html  media_ads.html  newsletter_success.html  pricing.html  privacy.html  product.html  resources.html  responsible_ai.html  search.html  security.html  services.html  team.html  terms.html  trust_center.html
app/utils/: email.py  rss.py  search.py
